test/readonly/fail/downcast00.v3
//@execute 0=2; 1=!TypeCheckException; 2=!TypeCheckException; 3=3; 4=47
class A { }
class B extends A { }
def castAA = range<A>.!<range<A>>;
def castAB = range<A>.!<range<B>>;
def castBA = range<B>.!<range<A>>;
def castBB = range<B>.!<range<B>>;

def x: range<A> = [A.new(), B.new()];
def y: range<B> = [B.new(), B.new(), B.new()];

def main(a: int) -> int {
	match (a) {
		0 => return castAA(x).length;
		1 => return castAB(y).length;
		2 => return castBA(x).length;
		3 => return castBB(y).length;
	}
	return 47;
}
